--- a/templates/main.html
+++ b/templates/main.html
@@ -31,7 +31,7 @@
       <li id="side_bar_account" @click="account">Account</li>
       </div>
       <div id="main_content">
-        <iframe id="main_iframe" src="/start.html">
+        <iframe id="main_iframe" src="/catalog.html">
 
         </iframe>
       </div>
