--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -77,17 +77,15 @@
 <body>
     
     <div id="drive_search">
-        &nbsp;<input type="text" v-model="destination" placeholder = "Search for Anything" required maxlength="50" @keyup.enter="search">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;<input type="text" v-model="name" placeholder = "Search for Anything" required maxlength="50" @keyup.enter="search">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button @click="search">Search</button>
+    You found {orders.length} items.<br>
     <div id="result">
-        <ul v-for='(item, i) in orders'>
-            <li>Order ID: {item.order_id}</li>&nbsp;
-            <li>Dest.: {item.destination}</li>&nbsp;
-            <li>Arr. Time: {item.arrival_time}</li>&nbsp;
-            <li>Passenger No.: {item.passenger_num}</li><br>
-            <li>Vehicle Type: {item.car_type}</li>&nbsp;&nbsp;
-            <li>Special info: {item.special_info}</li><br>
-            <button id="confirm_" @click="confirm(item.order_id)">Confirm</button>
+        <ul v-for='(item, i) in goods'>
+            <li>Name: {item.name}</li>&nbsp;
+            <li>Description.: {item.description}</li>&nbsp;
+            <br>
+            <button id="confirm_" @click="buy(item.pk)">Buy</button>
         </ul>
     </div>
     </div>
@@ -96,32 +94,39 @@
             el:"#drive_search",
             delimiters: ['{', '}'],
             data:{
-                destination: '',
-                date: '',
+                name: '',
                 orders: [],
+            },
+            mounted: function() {
+                that = this;
+                axios.get("/catalog").then(function(response) {
+                    if (response.data.errorMsg != null) {
+                        alert(response.data.errorMsg)
+                        location.href = 'login.html'
+                    } else {
+                        that.orders = []
+                        for (i = 0; i < response.data.length; ++i) {
+                            that.orders.push(response.data[i].fields)
+                        }
+                    }
+                }).catch(function(err) {
+                    alert('Error');
+                });
             },
             methods: {
                 search: function() {
                     that = this;
-                    if (that.destination == '') {
-                        alert("Destination cannot be empty!")
+                    if (that.name == '') {
+                        alert("Search input cannot be empty!")
                         return
                     }
-                    if (that.date == '') {
-                        alert("Date cannot be empty!")
-                        return
-                    }
-                    axios.get("driver_search/"+that.destination+"/"+that.date).then(function(response) {
-                        if (response.data.status_code == 1) {
+                    axios.get("search/"+that.name).then(function(response) {
+                        if (response.data.errorMsg != null) {
                             alert("Please log in first!");
                             location.href = "login.html"
-                        } else if (response.data.status_code == 2){
-                            alert("You are not a driver yet, please register first!")
-                            location.href = "driver_register.html"
                         } else {
                             that.orders = []
                             for (i = 0; i < response.data.length; ++i) {
-                                response.data[i].fields["order_id"] = response.data[i].pk
                                 that.orders.push(response.data[i].fields)                   
                             }
                             
@@ -131,22 +136,15 @@
                     });
                 }
                 ,
-            confirm: function(oid) {
+            buy: function(oid) {
                 that = this;
-                console.log(oid)
-                axios.get("confirm/"+oid).then(function(response) {
-                    if (response.data.status_code == 1) {
+                // location.href = "buy.html"
+                axios.get("buy/"+oid).then(function(response) {
+                    if (response.data.errorMsg != null) {
                         alert("Please log in first!");
                         location.href = "login.html"
-                    } else if (response.data.status_code == 2){
-                        alert("You are not a driver yet, please register first!")
-                        location.href = "driver_register.html"
-                    } else if (response.data.status_code == 3){
-                        alert("This order has been confirmed, do not confirm twice!")
-                        return; 
                     } else {
-                        alert("Order confirmed!")
-                        location.href = "drive_orders.html"
+                        location.href = "confirm.html"
                         
                     }
                 }).catch(function(err) {
