--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -16,7 +16,7 @@
         }
         input {
             margin-top: 30px;
-            width: 470px;
+            width: 510px;
             height: 30px;
             padding-left: 12px;
         
@@ -71,6 +71,11 @@
             margin-top: 10px;
             margin-bottom: 10px;
         }
+
+        p {
+            padding-left: -10px;
+            padding-top: 14px;
+        }
     </style>
 </head>
     
@@ -79,9 +84,9 @@
     <div id="drive_search">
         &nbsp;<input type="text" v-model="name" placeholder = "Search for Anything" required maxlength="50" @keyup.enter="search">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button @click="search">Search</button><br>
-    You found {orders.length} items.<br>
+    <p>You found {orders.length} items.</p>
     <div id="result">
-        <ul v-for='(item, i) in goods'>
+        <ul v-for='(item, i) in items'>
             <li>Name: {item.name}</li>&nbsp;
             <li>Description.: {item.description}</li>&nbsp;
             <br>
@@ -95,7 +100,7 @@
             delimiters: ['{', '}'],
             data:{
                 name: '',
-                orders: [],
+                items: [],
             },
             mounted: function() {
                 that = this;
@@ -104,9 +109,9 @@
                         alert(response.data.errorMsg)
                         location.href = 'login.html'
                     } else {
-                        that.orders = []
+                        that.items = []
                         for (i = 0; i < response.data.length; ++i) {
-                            that.orders.push(response.data[i].fields)
+                            that.items.push(response.data[i].fields)
                         }
                     }
                 }).catch(function(err) {
@@ -125,9 +130,9 @@
                             alert("Please log in first!");
                             location.href = "login.html"
                         } else {
-                            that.orders = []
+                            that.items = []
                             for (i = 0; i < response.data.length; ++i) {
-                                that.orders.push(response.data[i].fields)                   
+                                that.items.push(response.data[i].fields)                   
                             }
                             
                         }
