--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -84,7 +84,7 @@
     <div id="drive_search">
         &nbsp;<input type="text" v-model="name" placeholder = "Search for Anything" required maxlength="50" @keyup.enter="search">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button @click="search">Search</button><br>
-    <p>You found {orders.length} items.</p>
+    <p>You found {items.length} items.</p>
     <div id="result">
         <ul v-for='(item, i) in items'>
             <li>Name: {item.name}</li>&nbsp;
@@ -105,7 +105,6 @@
             mounted: function() {
                 that = this;
                 axios.get("/catalog").then(function(response) {
-                    console.log(response.data)
                     if (response.data.errorMsg != null) {
                         alert(response.data.errorMsg)
                         location.href = 'login.html'
