--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -47,6 +47,7 @@
             padding-bottom: 40px;
         }
         #result>ul {
+            float: left;
             font-size: 20px;
             list-style: none;
             width: 760px;
