--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -64,14 +64,19 @@
         }
         #confirm_ {
             float: right;
-            margin-right: 25px;
-            margin-top: -12px;
+            
             font-size: 19px;
             width: 120px;
             height: 45px;
             background-color: black;
             color: white;   
         }
+
+        #confirm_:hover {
+        background-color: white;
+        color: black;
+        cursor: pointer;
+    }
 
         p {
             padding-left: -10px;
