--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -93,7 +93,7 @@
     <p>You found {items.length} items.</p>
     <div id="result">
         <ul v-for='(item, i) in items'>
-            <li>Name: {item.name}</li>&nbsp;<br>
+            <li>Name: {item.name}</li>&nbsp;
             <li>Description.: {item.description}</li>&nbsp;
             <br>
             <button id="confirm_" @click="buy(item.pk)">Buy</button>
