--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -47,16 +47,17 @@
             padding-bottom: 40px;
         }
         #result>ul {
-            float: left;
             font-size: 20px;
             list-style: none;
-            width: 760px;
-            border: 2px solid gray;
-            margin-left: 5px;
+            width: 900px;
+            border: 1px solid gray;
+            margin-left: 120px;
             border-radius: 10px;
             margin-top: 20px;
+            text-align: left;
+            height: 50px;
             padding-left: 20px;
-            padding-top: 20px;
+            padding-top: 30px;
         }
         ul>li {
             display: inline;
