--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -65,10 +65,11 @@
         }
         #confirm_ {
             float: right;
-            
             font-size: 19px;
             width: 120px;
             height: 45px;
+            margin-top: 0px;
+            margin-left: 30px;
             background-color: black;
             color: white;   
         }
