--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -68,8 +68,8 @@
             font-size: 19px;
             width: 120px;
             height: 45px;
-            margin-top: -50px;
-            margin-left: -30px;
+            margin-top: -30px;
+            margin-right: 20px;
             background-color: black;
             color: white;   
         }
