--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -68,7 +68,7 @@
             font-size: 19px;
             width: 120px;
             height: 45px;
-            margin-top: -30px;
+            margin-top: -33px;
             margin-right: 20px;
             background-color: black;
             color: white;   
@@ -95,8 +95,8 @@
     <p>You found {items.length} items.</p>
     <div id="result">
         <ul v-for='(item, i) in items'>
-            <li>Name: {item.name}</li>&nbsp; |
-            <li>Description.: {item.description}</li>&nbsp;
+            <li>Name: {item.name}</li>&nbsp; <b>|</b>
+            <li>Desc.: {item.description}</li>&nbsp;
             <br>
             <button id="confirm_" @click="buy(item.pk)">Buy</button>
         </ul>
