--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -135,7 +135,7 @@
                     }
 
                     axios.get("search/"+that.name).then(function(response) {
-                        console.log(response.data[0].fields)
+                        console.log(response.data)
                         if (response.data.errorMsg != null) {
                             alert("Please log in first!");
                             location.href = "login.html"
