--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -98,7 +98,7 @@
             <li>Name: {item.name}</li>&nbsp;&nbsp;&nbsp; <b>|</b>
             <li>Desc.: {item.description}</li>&nbsp;
             <br>
-            <button id="confirm_" @click="buy(item.pk)">Buy</button>
+            <button id="confirm_" @click="buy(item.product_id)">Buy</button>
         </ul>
     </div>
     </div>
