--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -70,8 +70,8 @@
             <h2>Your Account Information
             </h2>
             <div id="request">
-                Name: &nbsp;<input id="u"type="text" v-model="item.name" required maxlength="50" disabled><br>
-                Desc.: &nbsp;<input id="p" type="password" v-model="item.description" disabled required><br>
+                Name: &nbsp;<input id="u"type="text" v-model="name" required maxlength="50" disabled><br>
+                Desc.: &nbsp;<input id="p" type="password" v-model="description" disabled required><br>
                 Amount: &nbsp;<input id="e" type="number" v-model="amount" required max="100"><br>
                 Your Address: X_coordinate:&nbsp;<input type="number" v-model="address_x" required >&nbsp;Y_Coordinate: <input type="number" v-model="address_y" required>
             
