--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -73,7 +73,7 @@
                 Name: &nbsp;<input id="u"type="text" v-model="name" disabled><br>
                 Desc.: &nbsp;<input id="p" type="text" v-model="description" disabled required><br>
                 Amount: &nbsp;<input id="e" type="number" v-model="amount" required max="100"><br>
-                Your Address: X_coordinate:&nbsp;<input type="number" v-model="address_x" required >&nbsp;<br>Y_Coordinate: <input type="number" v-model="address_y" required>
+                Your Address: X.&nbsp;<input type="number" v-model="address_x" required >&nbsp;Y.<input type="number" v-model="address_y" required>
             
 
                 <button @click="cancel">Cancel</button>
