--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -44,8 +44,8 @@
             color: white;
             font-size: 24px;
             margin-top: 40px;
-         
-            width: 220px;
+            text-align: center;
+            width: 170px;
             height: 80px;
         }
         button:hover {
