--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -45,7 +45,7 @@
             font-size: 24px;
             margin-top: 40px;
             text-align: center;
-            width: 170px;
+            width: 130px;
             height: 80px;
         }
         button:hover {
@@ -73,7 +73,7 @@
                 Name: &nbsp;<input id="u"type="text" v-model="name" disabled><br>
                 Desc.: &nbsp;<input id="p" type="text" v-model="description" disabled required><br>
                 Amount: &nbsp;<input id="e" type="number" v-model="amount" required max="100"><br>
-                Your Address: X.&nbsp;<input type="number" v-model="address_x" required >&nbsp;Y.<input type="number" v-model="address_y" required>
+                Your Address: X.&nbsp;<input type="number" v-model="address_x" required >&nbsp;&nbsp;&nbsp;Y.<input type="number" v-model="address_y" required>
             
 
                 <button @click="cancel">Cancel</button>
