--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -59,6 +59,10 @@
             vertical-align: middle;
   
         }
+
+        #p {
+            width: 230px;
+        }
         
     </style>
 </head>
@@ -71,7 +75,7 @@
                 Name: &nbsp;<input id="u"type="text" v-model="name" disabled><br>
                 Desc.: &nbsp;<input id="p" type="text" v-model="description" disabled required><br>
                 Amount: &nbsp;<input id="e" type="number" v-model="amount" required max="100"><br>
-                Your Address: X.&nbsp;<input type="number" v-model="address_x" required > &nbsp;&nbsp;&nbsp; Y.<input type="number" v-model="address_y" required><br>
+                Your Address: &nbsp;X.&nbsp;<input type="number" v-model="address_x" required > &nbsp;&nbsp;&nbsp; Y.&nbsp;&nbsp;<input type="number" v-model="address_y" required><br>
             
 
                 <button @click="cancel">Cancel</button>
