--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -128,6 +128,10 @@
                         alert("Amount cannot be empty!")
                         return
                     }
+                    if (that.amount > 1000) {
+                        alert("Exceed max purchase limit:1000!")
+                        return
+                    }
                     if (that.address_x == '' || that.address_y == '') {
                         alert("Address cannot be empty!")
                         return
