--- a/templates/account.html
+++ b/templates/account.html
@@ -112,14 +112,11 @@
             methods: {
                 edit: function() {
                     // unsafe
-                    edit: function() {
                     // unsafe
                     document.getElementById("p").disabled = false
                     document.getElementById("e").disabled = false
                     document.getElementById("sub").style.display = "inline"
 		             document.getElementById("EDIT").style.display = "none"
-                },
-
                 },
                 submit: function() {
                     that = this;
@@ -144,6 +141,7 @@
                             document.getElementById("sub").style.display = "none"
                             document.getElementById("p").disabled = true
                             document.getElementById("e").disabled = true
+                            document.getElementById("EDIT").style.display = "inline"
                             
                         }
                     }).catch(function(err) {
