--- a/templates/orders.html
+++ b/templates/orders.html
@@ -60,7 +60,7 @@
         <li>Order No: #{item.shipid},&nbsp;&nbsp;&nbsp;</li> 
         <li>Item: {item.name},&nbsp;&nbsp;&nbsp;</li> 
         <li>Amount: {item.amount},&nbsp;&nbsp;&nbsp;</li>
-        <li>Address: X.:{item.address_x} &nbsp; Y.:{item.address_y},&nbsp;&nbsp;&nbsp;</li>
+        <li>Address: X.{item.address_x} &nbsp; Y.{item.address_y},&nbsp;&nbsp;&nbsp;</li>
         <li>Status:<b style="color:green"> {item.status}</b></li>
         <!-- <button id="edit_" @click="view(item.id, false)">View</button> -->
     </ul>
