--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -63,6 +63,10 @@
         #p {
             width: 230px;
         }
+
+        #sub {
+            width: 400px;
+        }
         
     </style>
 </head>
@@ -79,7 +83,8 @@
             
 
                 <button @click="cancel">Cancel</button>
-                <button id="sub" @click="confirm">Confirm</button>
+                <button @click="cancel">Add To Cart</button>
+                <button id="sub" @click="confirm">Checkout Right Now</button>
             </div>
           
             
