--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -69,7 +69,7 @@
         }
 
         #a, #c {
-            padding-bottom: -10px;
+            margin-bottom: -10px;
         }
         
     </style>
