--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -69,7 +69,8 @@
         }
 
         #a, #c {
-            margin-bottom: -20px;
+            margin-bottom: -30px;
+            padding-bottom: -30px;
         }
         
     </style>
