--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -67,9 +67,11 @@
         #sub {
             width: 370px;
             padding-top: -10px;
+            float: left;
         }
 
         #a, #c {
+            margin-top: 20px;
             margin-bottom: -30px;
             padding-bottom: -30px;
         }
