--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -66,8 +66,9 @@
 
         #sub {
             width: 370px;
+            margin-top: -10px;
             padding-top: -10px;
-            float: left;
+            
         }
 
         #a, #c {
