--- a/templates/main.html
+++ b/templates/main.html
@@ -77,7 +77,7 @@
               //   else document.getElementById("main_iframe").src = "/not_a_driver.html"
               // },
               cart: function() {
-                document.getElementById("main_frame").src = "/cart.html"
+                document.getElementById("main_iframe").src = "/cart.html"
               },
               account: function() {
                 document.getElementById("main_iframe").src = "/account.html"
