--- a/templates/cart.html
+++ b/templates/cart.html
@@ -55,7 +55,7 @@
 </head>
 <body>
     <div id="orders_body">
-    <h2>Your Orders:</h2>
+    <h2>Items in Cart:</h2>
     <ul v-for='item in order_list'>
         <li>Order No: #{item.shipid},&nbsp;&nbsp;&nbsp;</li> 
         <li>Item: {item.name},&nbsp;&nbsp;&nbsp;</li> 
