--- a/templates/cart.html
+++ b/templates/cart.html
@@ -60,8 +60,9 @@
         <li>Order No: #{item.shipid},&nbsp;&nbsp;&nbsp;</li> 
         <li>Item: {item.name},&nbsp;&nbsp;&nbsp;</li> 
         <li>Amount: {item.amount},&nbsp;&nbsp;&nbsp;</li>
-        <li>Address: X.{item.address_x} &nbsp; Y.{item.address_y},&nbsp;&nbsp;&nbsp;</li>
-    
+        <li>Address: X.{item.address_x} &nbsp; Y.{item.address_y}&nbsp;&nbsp;&nbsp;</li>
+        <button>Remove</button>
+        <button>Edit</button>
         <!-- <button id="edit_" @click="view(item.id, false)">View</button> -->
     </ul>
     <br>
