--- a/templates/orders.html
+++ b/templates/orders.html
@@ -57,7 +57,7 @@
     <div id="orders_body">
     <h2>Your Orders:</h2>
     <ul v-for='item in order_list'>
-        <li>Order No: #{item.shipid},&nbsp;&nbsp;&nbsp;</li> 
+        <li>Tracking No: {item.shipid},&nbsp;&nbsp;&nbsp;</li> 
         <li>Item: {item.name},&nbsp;&nbsp;&nbsp;</li> 
         <li>Amount: {item.amount},&nbsp;&nbsp;&nbsp;</li>
         <li>Address: X.{item.address_x} &nbsp; Y.{item.address_y},&nbsp;&nbsp;&nbsp;</li>
