--- a/templates/cart.html
+++ b/templates/cart.html
@@ -62,7 +62,7 @@
         <li>Amount: {item.amount},&nbsp;&nbsp;&nbsp;</li>
         <li>Address: X.{item.address_x} &nbsp; Y.{item.address_y}&nbsp;&nbsp;&nbsp;</li>
         <button>Remove</button>
-        <button>Edit</button>
+        <button id = "edit_">Edit</button>
         <!-- <button id="edit_" @click="view(item.id, false)">View</button> -->
     </ul>
     <br>
