--- a/templates/cart.html
+++ b/templates/cart.html
@@ -64,6 +64,7 @@
         <button id = "edit_">Edit</button>
         <!-- <button id="edit_" @click="view(item.id, false)">View</button> -->
     </ul>
+    <button id = "edit_">Checkout</button>
     <br>
     
     </div>
