--- a/templates/cart.html
+++ b/templates/cart.html
@@ -53,7 +53,14 @@
         }
 
         #checkout {
+            float: right;
+            margin-right: 25px;
+            margin-top: -12px;
+            font-size: 19px;
             width: 300px;
+            height: 45px;
+            background-color: black;
+            color: white;
         }
     </style>
 </head>
